--- a/templates/details.html
+++ b/templates/details.html
@@ -31,7 +31,7 @@ background-position: 50% 10%;"
 
       <!-- //TODO Adicionar informações da aba detalhes! -->
 
-      <div>
+      <!-- <div>
         <section>
           <div>
             <img
@@ -138,7 +138,7 @@ background-position: 50% 10%;"
             >
           </div>
         </section>
-      </div>
+      </div> -->
 
       <div class="artworks">
         {% for item in newJson["data"][0]['artworks'] %}
