--- a/templates/game-card.html
+++ b/templates/game-card.html
@@ -6,7 +6,7 @@
     </a>
     <h2>{{ item.name }}</h2>
     <section>
-      <h3>Platforms</h3>
+      <h3>Coming soon!</h3>
       {% if item['platforms']|length %}
       <ul class="platforms">
         {% for platform in item["platforms"]%} {% if item["platforms"]|length >
@@ -78,20 +78,45 @@
       </p>
       {% endif %}
     </section>
-    <h3>Rating</h3>
-
-    <section class="stars">
-      <div class="star-rating">
-        <img src="../static/img/Star_full.svg.png" alt="Full star" />
-        <img src="../static/img/Star_full.svg.png" alt="Full star" />
-        <img src="../static/img/Star_full.svg.png" alt="Full star" />
-        <img src="../static/img/Star_full.svg.png" alt="Full star" />
-        <img src="../static/img/Star_full.svg.png" alt="Full star" />
+    <div
+      style="
+        display: flex;
+        width: 90%;
+        justify-content: space-around;
+        margin-top: 20px;
+        align-items: center;
+      "
+    >
+      <div>
+        <h3>Rating</h3>
+        {% if item["rating"] %}
+        <section class="stars">
+          <div class="star-rating">
+            <img src="../static/img/Star_full.svg.png" alt="Full star" />
+            <img src="../static/img/Star_full.svg.png" alt="Full star" />
+            <img src="../static/img/Star_full.svg.png" alt="Full star" />
+            <img src="../static/img/Star_full.svg.png" alt="Full star" />
+            <img src="../static/img/Star_full.svg.png" alt="Full star" />
+          </div>
+        </section>
+        <h4 id="rating-number">({{"%.2f"|format(item.rating/20)}}/5.00)</h4>
+        <span style="font-size: 10px">
+          Based on {{item.rating_count}} votes
+        </span>
+        {% else %}
+        <p style="font-size: 0.9rem; margin-top: 15px">
+          No ratings for this game yet!
+        </p>
+        {% endif %}
       </div>
-    </section>
+      <div>
+        <h3>Release Date</h3>
+        <p style="font-size: 0.9rem; margin-top: 15px">
+          {{item.first_release_date}}
+        </p>
+      </div>
+    </div>
 
-    <h4 id="rating-number">({{"%.2f"|format(item.rating/20)}}/5.00)</h4>
-    <span style="font-size: 10px"> Based on {{item.rating_count}} votes </span>
     <section id="game-card-buttons-section">
       <a href="/details/{{ item.id }}"
         ><button>
