--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,6 +16,16 @@
                     </div>
                 
                     <div class="input-field">
+                        <label for="first_name"><b>First Name</b></label>
+                        <input id="first_name" type="text" name="first_name" value="{{ session.get('first_name') }}">
+                    </div>
+                
+                    <div class="input-field">
+                        <label for="last_name"><b>Last Name</b></label>
+                        <input id="last_name" type="text" name="last_name" value="{{ session.get('last_name') }}">
+                    </div>
+                
+                    <div class="input-field">
                         <label for="username"><b>Username</b></label>
                         <input id="username" type="text" name="username" value="{{ session.get('username') }}">
                     </div>
