Tela de perfil inicial, commitando para usar outra branch

--- a/static/styles/patterns/buttons.css
+++ b/static/styles/patterns/buttons.css
@@ -10,6 +10,7 @@ button {
   transition: 0.5s;
   height: 3rem;
   width: 7rem;
+  margin-bottom: 10px;
 }
 button:hover {
   background-color: transparent;
