--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -1,10 +1,12 @@
 .about-user {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    margin-left: 5%;
 }
 
 .user-left {
     float: left;
+    margin-right: 20px;
 }
 
 .user-right {
@@ -15,8 +17,42 @@
 }
 
 .profile-image {
-    background-color: purple;
+    /* background-color: purple; */
+    position: absolute;
+    background-image: url('../img/Ednaldo.jpg');
+    background-position: center;
     border-radius: 50%;
     height: 200px;
     width: 200px;
+}
+
+.edit-image {
+    background-color: aliceblue;
+    background-image: url(../img/i-edit.png);
+    background-position: center;
+    background-size: contain;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    position: relative;
+    left: 140px;
+    top: 145px;
+    bottom: 0;
+    right: 0;
+}
+
+.edit-image:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.created {
+    float: left;
+    /* position: absolute !important; */
+    margin-right: 40%;
+}
+
+#save-profile {
+    float: left;
+    display: block;
 }
