--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,11 @@
 {% extends "layout.html" %} {% block title %} Steam verde - Profile {% endblock %} {% block content %}
 <div class="container">
+    <div class="spacing"></div>
     <div class="about-user">
         <div class="user-left">
-            <img class="profile-image" src="../static/img/Ednaldo.jpg">
+            <div class="profile-image">
+                <div class="edit-image"></div>
+            </div>
             <div class="username">
                 <h3>{{ session.get("username") }}</h3>
             </div>
@@ -12,24 +15,28 @@
                 <form action="{{ url_for('profile')}}" method="POST">
                     <div class="input-field">
                         <label for="email"><b>Email</b></label>
-                        <input id="email" type="text" name="email" value="{{ session.get('email') }}">
+                        <input id="email" type="text" name="email" value="{{ session.get('email') if session.get('email') else '' }}">
                     </div>
                 
                     <div class="input-field">
                         <label for="first_name"><b>First Name</b></label>
-                        <input id="first_name" type="text" name="first_name" value="{{ session.get('first_name') }}">
+                        <input id="first_name" type="text" name="first_name" value="{{ session.get('first_name') if session.get('first_name') else '' }}">
                     </div>
                 
                     <div class="input-field">
                         <label for="last_name"><b>Last Name</b></label>
-                        <input id="last_name" type="text" name="last_name" value="{{ session.get('last_name') }}">
+                        <input id="last_name" type="text" name="last_name" value="{{ session.get('last_name') if session.get('last_name') else '' }}">
                     </div>
                 
                     <div class="input-field">
                         <label for="username"><b>Username</b></label>
-                        <input id="username" type="text" name="username" value="{{ session.get('username') }}">
+                        <input id="username" type="text" name="username" value="{{ session.get('username') if session.get('username') else '' }}">
                     </div>
-                    <p>{{ session.get("created") }}</p>
+
+                    <!-- TODO  fazer a conversão de tempo do dado created para encaixar no texto -->
+                    <p class="input-field created">Created on: {{ session.get("created") }}</p>
+                    
+                    <button type="submit" id="save-profile">Save</button>
                 </form>
             </div>
         </div>
