--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -29,6 +29,7 @@ input::-webkit-inner-spin-button {
   width: 25%;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 10px;
   text-align: center;
   color: #970020;
   background-color: #ffd5de;
@@ -40,6 +41,7 @@ input::-webkit-inner-spin-button {
   width: 25%;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 10px;
   text-align: center;
   color: #180106;
   background-color: #cffbc8;
