--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -1,7 +1,7 @@
 .about-user {
     display: flex;
     /* justify-content: center; */
-    margin-left: 5%;
+    margin-left: 3%;
 }
 
 .user-left {
@@ -24,6 +24,7 @@
     border-radius: 50%;
     height: 200px;
     width: 200px;
+    border: 3px solid #609634;
 }
 
 .edit-image {
@@ -39,6 +40,7 @@
     top: 145px;
     bottom: 0;
     right: 0;
+    border: 3px solid #76b83f;
 }
 
 .edit-image:hover {
@@ -50,9 +52,20 @@
     float: left;
     /* position: absolute !important; */
     margin-right: 40%;
+    margin-bottom: 20px;
+}
+
+.options {
+    vertical-align: middle;
+    text-align: left;
 }
 
 #save-profile {
-    float: left;
-    display: block;
+    display: inline-block;
+}
+
+.change-password {
+    display: inline-block;
+    margin-left: 10px;
+    bottom: 0;
 }
