--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -1,7 +1,21 @@
-.about-user {
+.profile-container {
     display: flex;
-    /* justify-content: center; */
+}
+
+.about-user {
+    float: left;
+    display: flex;
     margin-left: 3%;
+}
+
+.favorites-title {
+    text-align: center;
+    font-family: "Libre Baskerville", sans-serif;
+    margin: 0;
+}
+
+.favorites {
+    float: right;
 }
 
 .user-left {
@@ -14,6 +28,10 @@
     text-align: left !important;
     min-height: 500px;
     min-width: 500px;
+}
+
+.username {
+    visibility: hidden;
 }
 
 .profile-image {
@@ -48,6 +66,10 @@
     cursor: pointer;
 }
 
+input[type="file"] {
+    display: none;
+}
+
 .created {
     float: left;
     /* position: absolute !important; */
@@ -68,4 +90,8 @@
     display: inline-block;
     margin-left: 10px;
     bottom: 0;
+}
+
+.carousel {
+    position: relative;
 }
