--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,8 @@
     <form action="{{ url_for('login')}}" method="POST">
       <div class="social-logins">
         <a href=""><div class="bg-google"></div></a>
-        <a href=""><div class="bg-github"></div></a>
-        <a href=""><div class="bg-twitter"></div></a>
+        <a href="/github"><div class="bg-github"></div></a>
+        <a href="/twitter"><div class="bg-twitter"></div></a>
         <a href=""><div class="bg-instagram"></div></a>
       </div>
       <div class="input-field">
