Terminando login social com Twitter

--- a/templates/register.html
+++ b/templates/register.html
@@ -4,10 +4,10 @@
   <div class="form-box">
     <form action="{{ url_for('register')}}" method="POST">
       <div class="social-logins">
-        <a href=""><div class="bg-google"></div></a>
-        <a href=""><div class="bg-github"></div></a>
-        <a href=""><div class="bg-twitter"></div></a>
-        <a href=""><div class="bg-instagram"></div></a>
+        <a href="/google"><div class="bg-google"></div></a>
+        <a href="/github"><div class="bg-github"></div></a>
+        <a href="/twitter"><div class="bg-twitter"></div></a>
+        <a href="/instagram"><div class="bg-instagram"></div></a>
       </div>
       <div class="input-field">
         <label for="email"><b>Email</b></label>
