--- a/templates/layout.html
+++ b/templates/layout.html
@@ -100,6 +100,11 @@
       type="text/css"
       href="{{ url_for('static', filename='styles/profile.css') }}"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles/rate-game.css') }}"
+    />
 
     <!-- Jquery scripts -->
     <script src="{{ url_for('static', filename='scripts/jquery.js') }}"></script>
