--- a/static/styles/social-logins.css
+++ b/static/styles/social-logins.css
@@ -24,7 +24,7 @@
     background: url('../img/social_logins_sprite.png') -10px -114px;
 }
 
-.bg-instagram {
+.bg-discord {
     display: inline-block;
     width: 32px; height: 32px;
     margin: 0 10px;
