--- a/templates/layout.html
+++ b/templates/layout.html
@@ -135,6 +135,7 @@
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css"
     />
+    {% block head %}{% endblock %}
   </head>
 
   <body>
