--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
         <a href="/google"><div class="bg-google"></div></a>
         <a href="/github"><div class="bg-github"></div></a>
         <a href="/twitter"><div class="bg-twitter"></div></a>
-        <a href="/instagram"><div class="bg-instagram"></div></a>
+        <a href="/discord"><div class="bg-discord"></div></a>
       </div>
       <div class="input-field">
         <label for="email"><b>Email</b></label>
