--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -6,7 +6,72 @@
   height: 100%;
 }
 
+#details-container h3 {
+  font-size: 2rem;
+  margin: 0;
+  margin-bottom: 2rem;
+}
+
 #details-content {
   background-color: rgba(27, 41, 57, 0.86);
   height: 100%;
+}
+
+#details-content-section {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 0 12vw;
+  margin-bottom: 50px;
+}
+
+#details-content-section {
+  > img {
+    height: 44vw;
+    width: 33vw;
+    box-shadow: 0px -4px 10px 5px rgba(27, 41, 57, 0.7);
+  }
+
+  > div {
+    background-color: rgba(27, 41, 57, 0.7);
+    width: 38vw;
+    padding: 3rem;
+    border-radius: 10px;
+    > section {
+      > div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 3rem;
+        /* background-color: aliceblue; */
+      }
+      > section {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+        margin-bottom: 15px;
+        > div {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+      }
+    }
+  }
+}
+
+.left-column {
+  width: 100%;
+}
+
+#genre-container {
+  display: flex;
+  align-items: center;
+}
+
+#genre {
+  padding: 5px;
+  border: 1px solid white;
+  border-radius: 5px;
+  margin: 0 5px;
 }
