--- a/static/styles/rate-game.css
+++ b/static/styles/rate-game.css
@@ -1,8 +1,16 @@
 .rate-container {
-    border: 1px solid black;
-    width: 25%;
-    height: 100px;
-    background-color: red;
-    position: static;
-    display: inline-block;
+  border: 1px solid black;
+
+  > h1 {
+    font-size: 1rem;
+  }
+  > form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    > input {
+      text-align: center;
+    }
+  }
 }
