--- a/static/styles/details.css
+++ b/static/styles/details.css
@@ -1,7 +1,3 @@
-.artworks img {
-  height: 100px;
-}
-
 #details-container {
   height: 100%;
 }
@@ -13,7 +9,7 @@
 }
 
 #details-content {
-  background-color: rgba(27, 41, 57, 0.86);
+  background-color: rgba(27, 41, 57, 0.7);
   height: 100%;
 }
 
@@ -26,10 +22,24 @@
 }
 
 #details-content-section {
-  > img {
-    height: 44vw;
+  > section {
     width: 33vw;
-    box-shadow: 0px -4px 10px 5px rgba(27, 41, 57, 0.7);
+    > img {
+      height: 44vw;
+      width: 100%;
+      box-shadow: 0px -4px 10px 5px rgba(27, 41, 57, 0.7);
+      border-radius: 10px;
+    }
+    > div {
+      height: 300px;
+      display: flex;
+      flex-direction: column;
+      /* align-items: center; */
+      > img {
+        height: 280px;
+        width: 420px;
+      }
+    }
   }
 
   > div {
