Adicionando modal para quando avaliar jogo

--- a/templates/details.html
+++ b/templates/details.html
@@ -20,11 +20,11 @@ background-position: 50% 10%;"
     <div id="details-content">
       <br />
       <br />
-      <h1>{{ newJson["data"][0].name }}</h1>
+      <h1 id="game-name">{{ newJson["data"][0].name }}</h1>
       <div>
         <section id="details-content-section">
           <section>
-            <img src="https:{{ newJson['data'][0]['cover']['url'] }}" />
+            <img id="game-image" src="{{ newJson['data'][0]['cover']['url'] }}" />
             <div class="carousel">
               {% for item in newJson["data"][0]['artworks'] %}
               <img src="{{ item['url'] }}" alt="" class="carousel-item" />
@@ -127,6 +127,7 @@ background-position: 50% 10%;"
     </div>
   </div>
 </div>
-<script src="{{ url_for('static', filename='scripts/profile.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/details.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/rate-game.js') }}"></script>
 
 {% endblock %}
