--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -4,7 +4,7 @@
     <h1>Upcoming Games</h1>
     
     <div id="filters">
-      <form id="rating_count_form" action="/top-games" method="get">
+      <form id="rating_count_form" action="/coming-soon" method="get">
         <div class="form-container">
           <h5 id='filter-info'>Filters*
             <span class="filters-tooltip">If no values were informed when the "filter" button is clicked, the default
