--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -1,96 +1,77 @@
-.profile-container {
-    display: flex;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .about-user {
-    float: left;
-    display: flex;
-    margin-left: 3%;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
 }
 
 .favorites-title {
-    text-align: center;
-    font-family: "Libre Baskerville", sans-serif;
-    margin: 0;
-}
-
-.favorites {
-    float: right;
-}
-
-.user-left {
-    float: left;
-    margin-right: 20px;
-}
-
-.user-right {
-    float: right;
-    text-align: left !important;
-    min-height: 500px;
-    min-width: 500px;
-}
-
-.username {
-    visibility: hidden;
+  text-align: center;
+  font-family: "Libre Baskerville", sans-serif;
+  margin: 30px 0;
 }
 
 .profile-image {
-    position: absolute;
-    background-position: center;
-    background-size: cover;
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-    border: 3px solid #609634;
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  border: 3px solid #609634;
 }
 
 .edit-image {
-    background-color: aliceblue;
-    background-image: url(../img/i-edit.png);
-    background-position: center;
-    background-size: contain;
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    position: relative;
-    left: 140px;
-    top: 145px;
-    bottom: 0;
-    right: 0;
-    border: 3px solid #76b83f;
+  background-color: aliceblue;
+  background-image: url(../img/i-edit.png);
+  background-position: center;
+  background-size: contain;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  position: relative;
+  left: 140px;
+  top: 145px;
+  bottom: 0;
+  right: 0;
+  border: 3px solid #76b83f;
 }
 
 .edit-image:hover {
-    opacity: 0.8;
-    cursor: pointer;
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 input[type="file"] {
-    display: none;
+  display: none;
 }
 
 .created {
-    float: left;
-    /* position: absolute !important; */
-    margin-right: 40%;
-    margin-bottom: 20px;
+  float: left;
+  /* position: absolute !important; */
+  margin-right: 40%;
+  margin-bottom: 20px;
 }
 
 .options {
-    vertical-align: middle;
-    text-align: left;
+  vertical-align: middle;
+  text-align: left;
 }
 
 #save-profile {
-    display: inline-block;
+  display: inline-block;
 }
 
 .change-password {
-    display: inline-block;
-    margin-left: 10px;
-    bottom: 0;
+  display: inline-block;
+  margin-left: 10px;
+  bottom: 0;
 }
 
 .carousel {
-    position: relative;
+  position: relative;
 }
