--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block title %} Steam verde {% endblock %} {% block content %}
-<div class="container">
+<div>
   <h1>Login</h1>
   <div class="form-box">
     <form action="{{ url_for('login')}}" method="POST">
