--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block title %} Steam verde {% endblock %} {% block content %}
-<div class="container">
+<div>
   <h1>Register</h1>
   <div class="form-box">
     <form action="{{ url_for('register')}}" method="POST">
