--- a/templates/profile.html
+++ b/templates/profile.html
@@ -81,13 +81,14 @@
     </div>
     <div class="carousel">
       <h2 class="favorites-title">My Ratings</h2>
-      {%if newJson['data']|length %} {% for item in newJson["data"] %}
+      <h6>No games rated yet!</h6>
+      <!-- {%if newJson['data']|length %} {% for item in newJson["data"] %}
       <a class="carousel-item" href="/details/{{ item.id }}"
         ><img src="https:{{ item['cover']['url'] }}"
       /></a>
-      {% endfor %} {% else %}
-      <h6>No items added to the favorites list yet!</h6>
-      {% endif %}
+      {% endfor %} {% else %} -->
+      <!-- <h6>No games rated yet!</h6> -->
+      <!-- {% endif %} -->
     </div>
   </section>
 </section>
