--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block title %} Steam verde {% endblock %} {% block content %}
-<div class="container">
+<div>
     <h1>Recover Password</h1>
     <div class="form-box">
         <!-- Se o recover code não tiver sido enviado, aparece o input de email -->
