--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,7 @@
 <section class="container">
   <div class="about-user">
     <div>
-      <h2>{{ session.get("username") }}</h2>
+      <!-- <h2>{{ session.get("username") }}</h2> -->
       <div class="profile-image"></div>
       <form action="{{ url_for('profile')}}">
         <div id="edit-images" class="edit-image"></div>
