--- a/templates/set-password.html
+++ b/templates/set-password.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block title %} Steam verde {% endblock %} {% block content %}
-<div class="container">
+<div>
     <h1>Set New Password</h1>
     <div class="form-box">
         <form action="{{ url_for('setPassword')}}" method="POST">
